[package]
name = "financial_ratios"
version = "0.0.0"
authors = ["Mohamed Hayibor <mohamedhayibor@gmail.com>"]

publish = true
description = "This crate (Rust library) provides utility functions (metrics) to measure a firm's performance (company's health)."

documentation = "https://github.com/mohamedhayibor/financial_ratios"
repository = "https://github.com/mohamedhayibor/financial_ratios"

license = "GPL-2.0"
keywords = ["finance", "ratios", "financial", "performance", "calculations"]

